syntax = "proto3";

package data.teams;
option go_package = "github.com/c4t-but-s4d/fastad/pkg/proto/data/teams";

message Team {
    int32 id = 1;
    string name = 2;
    string address = 3;
    string token = 4;
    map<string, string> labels = 5;
}

message ListRequest {
    int64 last_update = 1;
}

message ListResponse {
    repeated Team teams = 1;
    int64 last_update = 2;
}

message CreateBatchRequest {
    repeated Team teams = 1;
}

message CreateBatchResponse {
    repeated Team teams = 1;
}
